<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main activity -->
    <string name="app_name">Crazy Paranoid Server</string>
    <string name="action_settings">Settings</string>
    <string name="settings_title">Application settings</string>
    <string name="allow_camera">Allow camera</string>
    <string name="allow_camera_desc">Allows the client to take pictures using camera, both front and back</string>
    <string name="screen_shots">Allow screenshots</string>
    <string name="screen_shots_desc">Allows screenshots to be taken</string>
    <string name="sound_rec">Allow sound recording</string>
    <string name="sound_rec_desc">Allows recording of sound</string>
    <string name="sound_playback">Sound playback</string>
    <string name="sound_playback_desc">Allows sounds to be played</string>
    <string name="allow_gps_usage">Allow GPS usage</string>
    <string name="continous_gps">Continuous GPS polling</string>
    <string name="continous_gps_desc">Makes the the app continuously poll the location and save it in database</string>
    <string name="gps_polling_interval">Polling interval</string>
    <string name="gps_polling_interval_desc">Sets the time between checking the location</string>
    <string name="recive_notifications">Recive notifications</string>
    <string name="recive_notifications_desc">Allows you to recive notifications when phone is acsessed</string>
    <string name="alias_pass">Alias and Password</string>
    <string name="alias_pass_desc">Set alias/password and register/update web service</string>
    <string name="advanced">Advanced</string>
    <string name="advanced_desc">Advanced setting, including timeouts and so on</string>
    <!-- Set alias and password activity -->
    <string name="title_activity_set_alias_pass">Change Alias and Password</string>
    <string name="set_alias">Alias</string>
    <string name="set_alias_desc">Alias used to reg on server</string>
    <string name="set_pass">Password</string>
    <string name="set_pass_desc">Password needed to access device</string>
    <string name="retype_pass_desc">Retype password</string>
    <string name="reg_button">Register/Update</string>
    <string name="unreg_button">UnRegister</string>
    <string name="title_activity_sound_player">SoundPlayer</string>
    <string name="sound_activity">Playing sound</string>
    <string name="sound_activity_desc">Turn sound of using button below</string>
    <string name="mute_button">Stop sound!</string>

</resources>