<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/padding_5dp"
    android:paddingLeft="@dimen/padding_5dp"
    android:paddingRight="@dimen/padding_5dp"
    android:paddingTop="@dimen/padding_5dp"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/camera_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_camera"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_camera_desc" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/cameraCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:id="@+id/screenshots_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_shots"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/screen_shots_desc" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/screenShotsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:id="@+id/soundrec_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_rec"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_rec_desc" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/soundRecordingCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:id="@+id/soundplay_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_playback"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_playback_desc" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/soundPlaybackCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:id="@+id/gpsuse_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_gps_usage"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/gpsUsageCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:id="@+id/gpspoll_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continous_gps"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continous_gps_desc" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/continousGpsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:clickable="false" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps_polling_interval"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps_polling_interval_desc" />

                <SeekBar
                    android:id="@+id/poll_int_seekBar"
                    android:max="89"
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <EditText
                android:id="@+id/poll_int_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number"
                android:maxLength="2" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/notifications_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recive_notifications"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recive_notifications_desc" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/reciveNotificationsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />
        </TableRow>

        <LinearLayout
            android:id="@+id/alias_pass_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias_pass"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alias_pass_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/advanced_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_desc" />
        </LinearLayout>
    </TableLayout>

</ScrollView>